style subscribe and faq sections

--- a/src/index.html
+++ b/src/index.html
@@ -430,54 +430,57 @@
             <h2 class="section__title section__title--centered">FAQ</h2>
             <div class="faq-section__container">
                 <details class="faq-section__questions-container questions-container">
-                    <summary class="questions-container__question">Can I study only in English in Canada?
+                    <summary class="questions-container__question">Do I need a visa to study in Canada?
                     </summary>
-                    <p class="questions-container__answer">Yes, many colleges and universities across Canada offer
-                        programs fully in English. However, some provinces like Quebec also have French-language
-                        options.</p>
+                    <p class="questions-container__answer">Yes, most international students need a study permit and, in
+                        some cases, a temporary resident visa (TRV) depending on their country of origin.</p>
                 </details>
                 <details class="faq-section__questions-container questions-container">
-                    <summary class="questions-container__question">Are there provinces where IELTS is not required?
+                    <summary class="questions-container__question">How early should I apply for college or university?
                     </summary>
-                    <p class="questions-container__answer">Some institutions accept alternative language tests such as
-                        TOEFL or Duolingo English Test. It's important to check each school’s specific language
-                        requirements.</p>
+                    <p class="questions-container__answer">It’s recommended to apply at least 6–12 months before the
+                        program starts to ensure enough time for admission and visa processing.
+                    </p>
                 </details>
                 <details class="faq-section__questions-container questions-container">
-                    <summary class="questions-container__question">Can I work while studying in Canada?
+                    <summary class="questions-container__question">Can my family come with me to Canada?
                     </summary>
-                    <p class="questions-container__answer">International students are generally allowed to work up to 20
-                        hours per week during the academic term and full-time during scheduled breaks.</p>
+                    <p class="questions-container__answer">Yes. Spouses can apply for an open work permit, and children
+                        can attend school as dependents.
+                    </p>
                 </details>
                 <details class="faq-section__questions-container questions-container">
-                    <summary class="questions-container__question">What should I do if my visa application is refused?
+                    <summary class="questions-container__question">Is it possible to change schools or programs after
+                        arriving?
                     </summary>
-                    <p class="questions-container__answer">If your visa is refused, carefully review the refusal letter,
-                        address any issues it mentions, and consider reapplying or consulting with an immigration expert
-                        for guidance.</p>
+                    <p class="questions-container__answer">Yes, but you must notify IRCC and remain enrolled at a
+                        Designated Learning Institution (DLI) to keep your study permit valid.
+                    </p>
                 </details>
             </div>
         </div>
     </section>
     <section id="subscribe" class="section subscribe-section">
-        <div class="container subscribe-section__container">
-            <h2 class="subscribe-section__title">Get Your Free Guide</h2>
-            <form action="#" method="post" class="subscribe-section__form">
-                <div class="input">
-                    <label class="input__label visually-hidden" for="email"
-                    >Subscribe to our email newsletter</label
-                    >
-                    <input
-                            class="input__control"
-                            id="email"
-                            name="email"
-                            type="email"
-                            placeholder="Subscribe to our email newsletter"
-                            required
-                    />
-                    <button class="button" type="submit">Send Me</button>
-                </div>
-            </form>
+        <div class="container">
+            <div class="subscribe-section__container">
+                <h2 class="subscribe-section__title">Get More Information</h2>
+                <form action="#" method="post" class="subscribe-section__form">
+                    <div class="input">
+                        <label class="input__label visually-hidden" for="email"
+                        >Your email address</label
+                        >
+                        <input
+                                class="input__control"
+                                id="email"
+                                name="email"
+                                type="email"
+                                placeholder="Your email address"
+                                required
+                        />
+                        <button class="button" type="submit">Send Me</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
 </main>
