styling student life section

--- a/src/cookies.html
+++ b/src/cookies.html
@@ -14,28 +14,20 @@
 <section class="section cookies-policy" id="cookies">
     <div class="container">
         <h1 class="section__title section__title--centered">Cookie Policy</h1>
-
-        <p>This website uses cookies to improve your experience and to comply with Canadian privacy laws (PIPEDA).</p>
+        <p>This website uses cookies to enhance user experience and analyze traffic. By using our site, you agree to our use of cookies.</p>
 
         <h2>What Are Cookies?</h2>
-        <p>Cookies are small text files stored on your device that help us recognize your browser and remember your preferences.</p>
+        <p>Cookies are small text files stored on your device to help websites function properly or track usage patterns anonymously.</p>
 
-        <h2>How We Use Cookies</h2>
+        <h2>Types of Cookies We Use</h2>
         <ul>
-            <li>To enable core site functionality</li>
-            <li>To analyze site usage and improve performance</li>
-            <li>To personalize your experience</li>
+            <li><strong>Essential Cookies:</strong> Necessary for core functionality.</li>
+            <li><strong>Analytics Cookies:</strong> Help us understand user behavior.</li>
         </ul>
 
         <h2>Managing Cookies</h2>
-        <p>You can control cookies through your browser settings. However, disabling cookies may affect the functionality of the site.</p>
-
-        <h2>Third-Party Cookies</h2>
-        <p>We may use third-party services that also place cookies, such as analytics or advertising providers. These are subject to their own privacy policies.</p>
-
-        <h2>Contact</h2>
-        <p>If you have questions about our cookie policy, contact us at <a class="link link--content" href="mailto:info@yourwebsite.com">info@yourwebsite.com</a>.</p>
-    </div>
+        <p>You can disable cookies via your browser settings. However, some features may not function as intended.</p>
+</div>
 </section>
 <div class="policy__buttons">
     <a class="button button--link" href="/">Return to Home</a>
