--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -15,29 +15,22 @@
     <div class="container">
         <h1 class="section__title section__title--centered">Privacy Policy</h1>
 
-        <p>Your privacy is important to us. This policy explains how we collect, use, and protect your personal information.</p>
+        <p>This website collects minimal personal information (such as your email) solely for communication purposes related to studying and working in Canada. We do not sell or share your information with third parties.</p>
 
-        <h2>Information We Collect</h2>
-        <p>We may collect information such as your name, email address, and any other data you provide when you contact us or request guides.</p>
+        <h2>What We Collect</h2>
+        <ul>
+            <li>Email address (if you submit it via a form)</li>
+            <li>Anonymous traffic analytics (if enabled)</li>
+        </ul>
 
-        <h2>How We Use Your Information</h2>
-        <p>Your information is used to respond to inquiries, provide requested materials, and improve our services.</p>
-
-        <h2>Data Protection</h2>
-        <p>We take reasonable measures to protect your data against unauthorized access or disclosure.</p>
+        <h2>How We Use It</h2>
+        <p>Your information is used to provide updates, downloadable materials, or respond to your requests. You can unsubscribe anytime.</p>
 
         <h2>Your Rights</h2>
-        <p>You have the right to access, correct, or delete your personal information. Contact us anytime for assistance.</p>
+        <p>You may request access to your data, ask for its deletion, or object to its use by contacting us.</p>
 
-        <h2>Cookies</h2>
-        <p>We use cookies as described in our <a class="link link--content" href="cookie.html">Cookie Policy</a>.</p>
-
-        <h2>Changes to This Policy</h2>
-        <p>We may update this privacy policy periodically. Updates will be posted on this page.</p>
-
-        <h2>Contact</h2>
-        <p>For any questions or concerns, please email us at <a class="link link--content" href="mailto:info@yourwebsite.com">info@yourwebsite.com</a>.</p>
-    </div>
+        <p>For questions, contact: <a class="link link--content" href="mailto:contact@example.com">contact@example.com</a></p>
+ </div>
 </section>
 <div class="policy__buttons">
     <a class="button button--link" href="/">Return to Home</a>
