--- a/src/terms.html
+++ b/src/terms.html
@@ -14,22 +14,18 @@
 <section class="section" id="terms">
     <div class="container">
         <h1 class="section__title section__title--centered">Terms and Conditions</h1>
-        <p>Welcome to our website. By accessing or using this site, you agree to comply with the following terms and conditions.</p>
 
-        <h2>Use of Content</h2>
-        <p>All content on this website is for informational purposes only. We strive to provide accurate and up-to-date information, but we do not guarantee completeness or accuracy.</p>
+        <h2>1. Acceptance of Terms</h2>
+        <p>By accessing and using this website, you accept and agree to be bound by the terms outlined below.</p>
 
-        <h2>Intellectual Property</h2>
-        <p>All text, images, and other materials are protected by copyright and may not be copied or redistributed without permission.</p>
+        <h2>2. Intellectual Property</h2>
+        <p>All content is owned by the site creator and may not be copied, distributed, or reused without written permission.</p>
 
-        <h2>Limitation of Liability</h2>
-        <p>We are not responsible for any damages arising from the use of this website or reliance on its content.</p>
+        <h2>3. Limitation of Liability</h2>
+        <p>This website is informational. We are not responsible for any decisions made based on its content.</p>
 
-        <h2>Changes to Terms</h2>
-        <p>We reserve the right to update these Terms of Use at any time without prior notice.</p>
-
-        <h2>Contact</h2>
-        <p>If you have any questions about these terms, please contact us at <a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a>.</p>
+        <h2>4. Changes</h2>
+        <p>We may update these terms without notice. Continued use of the site implies acceptance of the new terms.</p>
     </div>
 </section>
 <div class="policy__buttons">
