--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,13 @@
                     <a href="/" class="link logo__link">SWC</a>
                 </div>
                 <ul class="header__menu">
-                    <li><a class="link" href="#education-types">Types of Education</a></li>
+                    <li><a class="link" href="#education-types">Education Types</a></li>
                     <li><a class="link" href="#application">Admission & Documents</a></li>
-                    <li><a class="link" href="#costs">Tuition & Financial Aid</a></li>
+                    <li><a class="link" href="#costs">Costs & Funding</a></li>
                     <li><a class="link" href="#student-life">Student Life</a></li>
-                    <li><a class="link" href="#career">Career Opportunities</a></li>
+                    <li><a class="link" href="#career">Career After Studies</a></li>
                     <li><a class="link" href="#faq">FAQ</a></li>
+                    <li><a class="link" href="#subscribe">Subscribe</a></li>
                 </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -79,12 +80,13 @@
                     <a href="/" class="link logo__link">SWC</a>
                 </div>
                 <ul class="mobile-menu__list">
-                    <li><a class="mobile-menu__link" href="#education-types">Types of Education</a></li>
+                    <li><a class="mobile-menu__link" href="#education-types">Education Types</a></li>
                     <li><a class="mobile-menu__link" href="#application">Admission & Documents</a></li>
-                    <li><a class="mobile-menu__link" href="#costs">Tuition & Financial Aid</a></li>
+                    <li><a class="mobile-menu__link" href="#costs">Costs & Funding</a></li>
                     <li><a class="mobile-menu__link" href="#student-life">Student Life</a></li>
-                    <li><a class="mobile-menu__link" href="#career">Career Opportunities</a></li>
+                    <li><a class="mobile-menu__link" href="#career">Career After Studies</a></li>
                     <li><a class="mobile-menu__link" href="#faq">FAQ</a></li>
+                    <li><a class="mobile-menu__link" href="#subscribe">Subscribe</a></li>
                 </ul>
             </div>
         </div>
@@ -123,20 +125,41 @@
                 </h2>
                 <p class="text--center">Canada offers a diverse range of educational opportunities tailored to
                     international students. You can choose from:</p>
-                <ul>
-                    <li><strong>Colleges:</strong> Career-oriented programs with hands-on experience.</li>
-                    <li><strong>Universities:</strong> Academic and research-based degrees (Bachelor’s, Master’s, PhD).
+                <ul class="education-section__list">
+                    <li>
+                        <article class="edu-card">
+                            <h3 class="edu-card__title">Colleges</h3>
+                            <p>Career-oriented programs with hands-on experience.</p>
+                        </article>
                     </li>
-                    <li><strong>Language Schools:</strong> English or French language preparation for studies or
-                        immigration.
+                    <li>
+                        <article class="edu-card">
+                            <h3 class="edu-card__title">Universities</h3>
+                            <p>Academic and research-based degrees (Bachelor’s, Master’s, PhD).</p>
+                        </article>
                     </li>
-                    <li><strong>Pathway Programs:</strong> Bridging programs that prepare you for university or college
-                        entry.
+                    <li>
+                        <article class="edu-card">
+                            <h3 class="edu-card__title">Language Schools</h3>
+                            <p>English or French language preparation for studies or
+                                immigration.
+                            </p>
+                        </article>
                     </li>
-                    <li><strong>Provincial Differences:</strong> Ontario offers many co-op programs; British Columbia
-                        emphasizes innovation; Quebec has its own unique CEGEP system.
+                    <li>
+                        <article class="edu-card">
+                            <h3 class="edu-card__title">Pathway Programs</h3>
+                            <p>Bridging programs that prepare you for university or college
+                                entry.</p>
+                        </article>
                     </li>
                 </ul>
+                <article class="edu-card edu-card--center">
+                    <h3 class="edu-card__title">Provincial Differences</h3>
+                    <p><strong>Ontario</strong> offers many co-op programs;<br>
+                        <strong>British Columbia</strong>
+                        emphasizes innovation;<br> <strong>Quebec</strong> has its own unique CEGEP system.</p>
+                </article>
             </div>
         </div>
     </section>
@@ -185,45 +208,33 @@
         </div>
     </section>
     <section class="section costs-section" id="costs">
-        <div class="container costs-section__container">
-            <h2 class="section__title section__title--centered">Costs and Financial Aid</h2>
-            <p class="text--center">Canada offers high-quality education at reasonable costs, with financial support
-                options:</p>
-            <ul>
-                <li><strong>Tuition:</strong> CAD $15,000–$30,000 per year depending on program and province.</li>
-                <li><strong>Living Expenses:</strong> Around CAD $10,000–$15,000 per year.</li>
-                <li><strong>Scholarships:</strong> Offered by the government, provinces, and universities (merit- or
-                    need-based).
-                </li>
-                <li><strong>Part-Time Work:</strong> Up to 20 hours/week during studies, full-time during breaks.</li>
-                <li><strong>PGWP:</strong> Allows graduates to work in Canada for up to 3 years.</li>
-            </ul>
-            <!--            <div class="costs-section__content">-->
-            <!--                <p>-->
-            <!--                    Studying in Canada is a rewarding investment, but it's important to understand the costs involved.-->
-            <!--                    Tuition fees for international students typically range from CAD 15,000 to 35,000 per year,-->
-            <!--                    depending on the program and institution you choose. Besides tuition, you’ll need to budget for-->
-            <!--                    living expenses, which usually amount to about CAD 10,000 to 15,000 annually. This covers essentials-->
-            <!--                    like housing, food, transportation, and other daily needs.-->
-            <!--                </p>-->
-            <!--                <p>-->
-            <!--                    Fortunately, there are many financial aid options to help ease the burden. Scholarships are-->
-            <!--                    available at federal, provincial, and institutional levels — and platforms like <a-->
-            <!--                        class="link link&#45;&#45;content"-->
-            <!--                        href="https://www.scholarshipscanada.com/" target="_blank" rel="noopener">ScholarshipsCanada</a>-->
-            <!--                    make it easy to find opportunities that match your profile.-->
-            <!--                </p>-->
-            <!--                <p>-->
-            <!--                    While studying, most students can work up to 20 hours per week, allowing you to gain valuable-->
-            <!--                    experience and support your living costs. After graduation, the Post-Graduation Work Permit (PGWP)-->
-            <!--                    lets you work full-time in Canada for up to three years, providing a great pathway to launch your-->
-            <!--                    career here. You can find more details on the official <a class="link link&#45;&#45;content"-->
-            <!--                                                                              href="https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/work/after-graduation.html"-->
-            <!--                                                                              target="_blank" rel="noopener">IRCC-->
-            <!--                    website</a>.-->
-            <!--                </p>-->
-            <!--            </div>-->
+        <div class="container">
+            <div class="costs-section__container">
+                <div class="costs-section__content">
+                    <h2 class="section__title section__title--centered">Costs and Financial Aid</h2>
+                    <p class="text--center">Canada offers high-quality education at reasonable costs, with financial
+                        support
+                        options:</p>
+                    <ul>
+                        <li><strong>Tuition:</strong> CAD $15,000–$30,000 per year depending on program and province.
+                        </li>
+                        <li><strong>Living Expenses:</strong> Around CAD $10,000–$15,000 per year.</li>
+                        <li><strong>Scholarships:</strong> Offered by the government, provinces, and universities
+                            (merit- or
+                            need-based).
+                        </li>
+                        <li><strong>Part-Time Work:</strong> Up to 20 hours/week during studies, full-time during
+                            breaks.
+                        </li>
+                        <li><strong>PGWP:</strong> Allows graduates to work in Canada for up to 3 years.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
+        <img class="costs-section__img"
+             srcset="public/images/cost-section.png 1x, public/images/cost@2x.png 2x"
+             src="public/images/cost-section.png"
+             alt="Woman with laptop">
     </section>
     <section class="section life-section" id="student-life">
         <div class="container">
@@ -395,12 +406,13 @@
                     <a href="/" class="link logo__link">SWC</a>
                 </div>
                 <ul class="footer__menu">
-                    <li><a class="footer__link link" href="#education-types">Types of Education</a></li>
+                    <li><a class="footer__link link" href="#education-types">Education Types</a></li>
                     <li><a class="footer__link link" href="#application">Admission & Documents</a></li>
-                    <li><a class="footer__link link" href="#costs">Tuition & Financial Aid</a></li>
+                    <li><a class="footer__link link" href="#costs">Costs & Funding</a></li>
                     <li><a class="footer__link link" href="#student-life">Student Life</a></li>
-                    <li><a class="footer__link link" href="#career">Career Opportunities</a></li>
+                    <li><a class="footer__link link" href="#career">Career After Studies</a></li>
                     <li><a class="footer__link link" href="#faq">FAQ</a></li>
+                    <li><a class="footer__link link" href="#subscribe">Subscribe</a></li>
                 </ul>
             </nav>
         </div>
